[package]
name = "rust_test"
version = "0.1.0"
authors = ["szqh97 <szqh97@163.com>"]

[dependencies]
rustc-serialize = "0.3.16"

[[bin]]
name = "jsong_test"
path = "src/json_test.rs"

[[bin]]
name = "lifetime"
path = "src/life_time.rs"

[[bin]]
name = "rust-borrow-lifetimes"
path = "src/rust-borrow-lifetimes.rs"
